# 470FinalProject

./: README  computeExpectedWeights.m  computeNegativeTotalProbability.m  computeProbability.m  computeWeightsFromData.m  createAllTrees.m  createEdge.m  createMigrationNetwork.m  createSimpleNetwork.m  generateTreeFromNewick.m  gradientDescent.m  hillClimbing.m  learningPlot.m  loadLibrary.m  phylipInput  quasiNewton.m  randomNeighbor.m  simpleFakeExperiment.m  solveMigrationSample.m
networkprob/: .gitignore  CMakeLists.txt
networkprob/src/: densemap.h  example.h  main.cpp  mathutils.h  matlabffi.cpp  matlabffi.h  netnode.h  test.cpp  treenode.h
